# Quosmos

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-pages.yml  docker-publish.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  qasm_io.py  quantum_engine.py  shor.py  tutor_kb.py
backend/app/routers/: algorithms.py  circuits.py  tutor.py
backend/tests/: test_api.py  test_coverage_extra.py  test_quantum_engine.py
docs/: architecture.md  contributing.md  developer-guide.md  installation.md  user-guide.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/__tests__/: ProbabilityBars.test.tsx
frontend/src/components/layout/: CommandPalette.tsx  Sidebar.tsx  TopBar.tsx  TutorPanel.tsx
frontend/src/components/ui/: CircuitDiagram.tsx  CountsChart.tsx  Math.tsx  Primitives.tsx  ProbabilityBars.tsx  StateVectorView.tsx  Stepper.tsx
frontend/src/content/: challenges.ts  tutor.ts
frontend/src/content/__tests__/: challenges.test.ts
frontend/src/lib/: api.ts  download.ts
frontend/src/quantum/: algorithms.ts  bloch.ts  circuit.ts  complex.ts  gates.ts  index.ts  qasm.ts  shor.ts  statevector.ts
frontend/src/store/: useAppStore.ts  useCircuitStore.ts  useProgressStore.ts  useProjectStore.ts
frontend/src/test/: setup.ts
(+27 files in other folders)
