[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quosmos-backend"
version = "1.0.0"
description = "Quosmos backend - FastAPI + Qiskit quantum engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "qiskit>=1.1",
  "qiskit-aer>=0.14",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"

[tool.setuptools.packages.find]
include = ["app*"]
